crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-hybrid_multiple_column_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": {
        "answer": "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
      },
      "primary_key": {
        "id": 890
      },
      "score": 0.01
    },
    {
      "dataset": "qs",
      "matches": {
        "question": "How is microsporidia infection typically acquired?"
      },
      "primary_key": {
        "id": 446
      },
      "score": 0.01
    },
    {
      "dataset": "qs",
      "matches": {
        "question": "Which of the following is an intensive property of a system?"
      },
      "primary_key": {
        "id": 1289
      },
      "score": 0.01
    },
    {
      "dataset": "qs",
      "matches": {
        "question": "Which compound is not an intermediate of the TCA cycle?"
      },
      "primary_key": {
        "id": 1279
      },
      "score": 0.01
    }
  ]
}
